# fatp-balancer

./: CMakeLists.txt  README.md  build.bat  build.ps1  build.sh
.github/workflows/: benchmarks.yml  ci.yml
demo/: balancer.js  balancer.wasm  index.html
guidelines/: fatp-balancer_AI_Assistant_Demerits.md  fatp-balancer_Benchmark_Code_Style_Guide.md  fatp-balancer_CI_Workflow_Style_Guide.md  fatp-balancer_Development_Guidelines.md  fatp-balancer_Meta_Header_Guidelines.md  fatp-balancer_Systemic_Hygiene_Policy.md  fatp-balancer_Teaching_Documents_Style_Guide.md  fatp-balancer_Technical_Debt_Log.md  fatp-balancer_Test_Suite_Style_Guide.md
include/balancer/: AdmissionControl.h  AdvisorConcept.h  AffinityMatrix.h  AgingEngine.h  Balancer.h  BalancerConfig.h  BalancerFeatures.h  ClusterView.h  CostModel.h  FeatureSupervisor.h  HoldingQueue.h  INode.h  ISchedulingPolicy.h  Job.h  LoadMetrics.h  NNAdvisor.h  PolicyFactory.h  TelemetryAdvisor.h
policies/: AffinityRouting.h  Composite.h  EarliestDeadlineFirst.h  LeastLoaded.h  RoundRobin.h  ShortestJobFirst.h  WeightedCapacity.h  WorkStealing.h
sim/: FaultInjector.h  SimulatedCluster.h  SimulatedNode.h  TelemetrySnapshot.h
tests/: test_AdmissionControl_HeaderSelfContained.cpp  test_AdvisorConcept_HeaderSelfContained.cpp  test_AffinityMatrix_HeaderSelfContained.cpp  test_AffinityRouting_HeaderSelfContained.cpp  test_AgingEngine_HeaderSelfContained.cpp  test_BalancerConfig_HeaderSelfContained.cpp  test_BalancerFeatures_HeaderSelfContained.cpp  test_Balancer_HeaderSelfContained.cpp  test_ClusterView_HeaderSelfContained.cpp  test_Composite_HeaderSelfContained.cpp  test_CostModel_HeaderSelfContained.cpp  test_EarliestDeadlineFirst_HeaderSelfContained.cpp  test_FaultInjector_HeaderSelfContained.cpp  test_FeatureSupervisor_HeaderSelfContained.cpp  test_HoldingQueue_HeaderSelfContained.cpp  test_INode_HeaderSelfContained.cpp  test_ISchedulingPolicy_HeaderSelfContained.cpp  test_Job_HeaderSelfContained.cpp  test_LeastLoaded_HeaderSelfContained.cpp  test_LoadMetrics_HeaderSelfContained.cpp  test_NNAdvisor_HeaderSelfContained.cpp  test_PolicyFactory_HeaderSelfContained.cpp  test_RoundRobin_HeaderSelfContained.cpp  test_ShortestJobFirst_HeaderSelfContained.cpp  test_TelemetryAdvisor_HeaderSelfContained.cpp  test_TelemetrySnapshot_HeaderSelfContained.cpp  test_WeightedCapacity_HeaderSelfContained.cpp  test_WorkStealing_HeaderSelfContained.cpp  test_admission.cpp  test_affinity_matrix.cpp  test_aging.cpp  test_balancer.cpp  test_balancer_core.cpp  test_cost_model.cpp  test_fault_scenarios.cpp  test_feature_manager_cascade_probe.cpp  test_feature_supervisor.cpp  test_holding_queue.cpp  test_include_all_balancer_headers.cpp  test_nn_advisor.cpp  (+7 more)
tools/nn_advisor/: README.md  nn_advisor_harness.py
wasm/: BalancerBindings.cpp  CMakeLists.txt  README.md  build-wasm.bat  build-wasm.ps1
